[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeqa"
version = "0.1.0"
description = "Ask Claude questions about your code from the terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "anthropic", "cli", "ai", "code-review"]
dependencies = [
    "typer[all]>=0.12",
    "anthropic>=0.40",
    "keyring>=25",
    "rich>=13",
]

[project.scripts]
codeqa = "codeqa.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pyinstaller>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["codeqa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
